samples/_failures_safe/1761346505_1e44b3_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_691eb2a1.c: In function ‘main’:
./samples/SAFE/__tmp_691eb2a1.c:127:30: error: missing terminating " character
  127 |     add_log_entry(&analyzer, "2024-01-15 10:
      |                              ^~~~~~~~~~~~~~~
./samples/SAFE/__tmp_691eb2a1.c:127:5: error: expected expression at end of input
  127 |     add_log_entry(&analyzer, "2024-01-15 10:
      |     ^~~~~~~~~~~~~
./samples/SAFE/__tmp_691eb2a1.c:127:5: error: too few arguments to function ‘add_log_entry’
./samples/SAFE/__tmp_691eb2a1.c:51:5: note: declared here
   51 | int add_log_entry(struct LogAnalyzer *analyzer, const char *timestamp, const char *level, const char *message) {
      |     ^~~~~~~~~~~~~
./samples/SAFE/__tmp_691eb2a1.c:127:5: error: expected declaration or statement at end of input
  127 |     add_log_entry(&analyzer, "2024-01-15 10:
      |     ^~~~~~~~~~~~~
